frontend/test/should_pass/exact_004.grg
exact rule r {
	x:Node --> y:Node;
	x --> z:Node;
	y --> y;

	replace {
	}
}

