frontend/test/should_fail/ret_021.grg
rule r : (Edge)
{
    x:Node;
    y:Node;
    
    x -e:Edge-> y;
    
    replace {
        return (e);
    }
}
